# Translate6Frames

./: HISTORY.md  License.txt  README.md  setup.cfg  setup.py
src/translate6frames/: translate6frames.py
tests/: Test.py  test.fa
