[metadata]
name = Translate6Frames
version = 0.0.1
author = Ehdieh Khaledian
author_email = khaledianehdieh@gmail.com
description = Translate genes to proteins
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/khaledianehdieh/Translate6Frames.git
project_urls =
    Bug Tracker = https://github.com/khaledianehdieh/Translate6Frames/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src